Wb2 (#118)
* trying to fix search

* fixing the search again

* next try with search pagination

* new logic for search

* again search changed

* added a new api for clients search

---------
